--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <nav id="movies">
       <ul>
-        <li data-episode-url="http://swapi.co/api/films/4/">Episode I</li>
-        <li data-episode-url="http://swapi.co/api/films/5/">Episode II</li>
-        <li data-episode-url="http://swapi.co/api/films/.../">Episode ...</li>
+        <li data-episode-url="http://swapi.co/api/films/1/">Episode 1</li>
+        <li data-episode-url="http://swapi.co/api/films/2/">Episode 2</li>
+        <li data-episode-url="http://swapi.co/api/films/3/">Episode 3</li>
       </ul>
     </nav>
 
